# Cargo.toml
[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "chrono", "macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version="1.0.189", features = ["derive"] }
serde_json = "1"
async-std = "1.12.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
bcrypt = "0.15.0"
jsonwebtoken = "9.1.0"
env_logger = "0.10.0"
cookie = "0.18.0"